tests/e2e/keyword_and_service_argument.error
Error: syntax error in story at line 1, column 13

1|    http server from: "" and: "" // Idea is to demonstrate argument `and` is parsed successfully.
                  ^^^^^^^^

E0141: http action `server` does not accept argument `from`.
